--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -17,7 +17,10 @@ service routing protocols model multi-agent
 ip as-path access-list ASPATH-WAN permit 65000 any
 !
 !
-ip nat profile VRF-AWARE-NAT
+ip nat profile IE-DIRECT-NAT
+   ip nat source dynamic access-list ALLOW-ALL overload
+!
+ip nat profile IE-ZSCALER-NAT
    ip nat source dynamic access-list ALLOW-ALL pool PORT-ONLY-POOL
 !
 hostname cv-pathfinder-edge1
@@ -70,6 +73,7 @@ router adaptive-virtual-topology
       path-selection load-balance LB-DEFAULT-AVT-POLICY-DEFAULT
    !
    profile DEFAULT-AVT-POLICY-VIDEO
+      internet-exit policy DIRECT-EXIT-POLICY-1
       path-selection load-balance LB-DEFAULT-AVT-POLICY-VIDEO
    !
    profile DEFAULT-POLICY-DEFAULT
@@ -109,6 +113,9 @@ router adaptive-virtual-topology
 !
 router internet-exit
     !
+    exit-group DIRECT-EXIT-POLICY-1
+        local connection IE-Ethernet3
+    !
     exit-group ZSCALER-EXIT-POLICY-1_PRI
         local connection IE-Tunnel100
     !
@@ -126,6 +133,9 @@ router internet-exit
     !
     exit-group ZSCALER-EXIT-POLICY-2_TER
         local connection IE-Tunnel112
+    !
+    policy DIRECT-EXIT-POLICY-1
+        exit-group DIRECT-EXIT-POLICY-1
     !
     policy ZSCALER-EXIT-POLICY-1
         exit-group ZSCALER-EXIT-POLICY-1_PRI
@@ -197,6 +207,9 @@ router path-selection
       path-group INET priority 2
 !
 router service-insertion
+   connection IE-Ethernet3
+      interface Ethernet3 next-hop 172.31.0.1
+      monitor connectivity host IE-Ethernet3
    connection IE-Tunnel100
       interface Tunnel100 primary
       monitor connectivity host IE-Tunnel100
@@ -323,6 +336,7 @@ interface Ethernet3
    no switchport
    ip address dhcp
    dhcp client accept default-route
+   ip nat service-profile IE-DIRECT-NAT
 !
 interface Ethernet52
    description P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet2
@@ -364,7 +378,7 @@ interface Tunnel100
    description Internet Exit ZSCALER-EXIT-POLICY-1 PRI
    mtu 1394
    ip address unnumbered Loopback0
-   ip nat service-profile VRF-AWARE-NAT
+   ip nat service-profile IE-ZSCALER-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.37.121.1
@@ -374,7 +388,7 @@ interface Tunnel101
    description Internet Exit ZSCALER-EXIT-POLICY-1 SEC
    mtu 1394
    ip address unnumbered Loopback0
-   ip nat service-profile VRF-AWARE-NAT
+   ip nat service-profile IE-ZSCALER-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.39.77.1
@@ -384,7 +398,7 @@ interface Tunnel102
    description Internet Exit ZSCALER-EXIT-POLICY-1 TER
    mtu 1394
    ip address unnumbered Loopback0
-   ip nat service-profile VRF-AWARE-NAT
+   ip nat service-profile IE-ZSCALER-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.50.9.1
@@ -394,7 +408,7 @@ interface Tunnel110
    description Internet Exit ZSCALER-EXIT-POLICY-2 PRI
    mtu 1394
    ip address unnumbered Loopback0
-   ip nat service-profile VRF-AWARE-NAT
+   ip nat service-profile IE-ZSCALER-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.37.121.1
@@ -404,7 +418,7 @@ interface Tunnel111
    description Internet Exit ZSCALER-EXIT-POLICY-2 SEC
    mtu 1394
    ip address unnumbered Loopback0
-   ip nat service-profile VRF-AWARE-NAT
+   ip nat service-profile IE-ZSCALER-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.39.77.1
@@ -414,7 +428,7 @@ interface Tunnel112
    description Internet Exit ZSCALER-EXIT-POLICY-2 TER
    mtu 1394
    ip address unnumbered Loopback0
-   ip nat service-profile VRF-AWARE-NAT
+   ip nat service-profile IE-ZSCALER-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.50.9.1
@@ -474,12 +488,19 @@ application traffic recognition
 !
 monitor connectivity
    no shutdown
+   interface set SET-Ethernet3 Ethernet3
    interface set SET-Tunnel100 Tunnel100
    interface set SET-Tunnel101 Tunnel101
    interface set SET-Tunnel102 Tunnel102
    interface set SET-Tunnel110 Tunnel110
    interface set SET-Tunnel111 Tunnel111
    interface set SET-Tunnel112 Tunnel112
+   !
+   host IE-Ethernet3
+      description
+      Internet Exit DIRECT-EXIT-POLICY-1
+      local-interfaces SET-Ethernet3
+      ip 172.31.0.1
    !
    host IE-Tunnel100
       description
