--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10605,6 +10605,9 @@ keys:
             keys:
               d_path:
                 type: bool
+          redistribute_internal:
+            type: bool
+            description: Redistribute internal BGP routes.
       listen_ranges:
         type: list
         description: 'Improved "listen_ranges" data model to support multiple listen
@@ -11707,6 +11710,12 @@ keys:
                 route_map:
                   description: Route-map name.
                   type: str
+          bgp:
+            type: dict
+            keys:
+              redistribute_internal:
+                type: bool
+                description: Redistribute internal BGP routes.
           peer_groups:
             type: list
             primary_key: name
@@ -11993,6 +12002,12 @@ keys:
                 route_map:
                   description: Route-map name.
                   type: str
+          bgp:
+            type: dict
+            keys:
+              redistribute_internal:
+                type: bool
+                description: Redistribute internal BGP routes.
           peer_groups:
             type: list
             primary_key: name
