--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-vrf-address-families.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-vrf-address-families.yml
@@ -23,11 +23,11 @@ router_bgp:
         activate: false
     redistribute_routes:
       - source_protocol: ospfv3
-        ospf_match_external: true
+        ospf_route_type: external
       - source_protocol: ospf
-        ospf_match_internal: true
+        ospf_route_type: internal
       - source_protocol: ospfv3
-        ospf_match_nssa_external: nssa-external 2
+        ospf_route_type: nssa-external 2
       - source_protocol: isis
         rcf: Router_BGP_Isis()
   address_family_flow_spec_ipv4:
@@ -60,11 +60,11 @@ router_bgp:
             route_map: BARFOO
         redistribute_routes:
           - source_protocol: ospf
-            ospf_match_external: true
+            ospf_route_type: external
           - source_protocol: ospfv3
-            ospf_match_internal: true
+            ospf_route_type: internal
           - source_protocol: ospf
-            ospf_match_nssa_external: nssa-external 1
+            ospf_route_type: nssa-external 1
           - source_protocol: connected
             rcf: VRF_AFIPV4_RCF_CONNECTED_1()
           - source_protocol: static
@@ -92,12 +92,12 @@ router_bgp:
           - prefix: aa::/64
         redistribute_routes:
           - source_protocol: ospfv3
-            ospf_match_external: true
+            ospf_route_type: external
           - source_protocol: ospfv3
             include_leaked: true
-            ospf_match_internal: true
+            ospf_route_type: internal
           - source_protocol: ospfv3
-            ospf_match_nssa_external: nssa-external
+            ospf_route_type: nssa-external
           - source_protocol: connected
             rcf: VRF_AFIPV6_RCF_CONNECTED()
           - source_protocol: static
@@ -121,11 +121,11 @@ router_bgp:
             route_map: BARFOO
         redistribute_routes:
           - source_protocol: ospfv3
-            ospf_match_external: true
+            ospf_route_type: external
           - source_protocol: ospf
-            ospf_match_internal: true
+            ospf_route_type: internal
           - source_protocol: ospf
-            ospf_match_nssa_external: nssa-external 2
+            ospf_route_type: nssa-external 2
           - source_protocol: connected
             rcf: VRF_AFIPV4MULTI_RCF_CONNECTED()
           - source_protocol: static
@@ -142,11 +142,11 @@ router_bgp:
           - prefix: ff08:1::/64
         redistribute_routes:
           - source_protocol: ospf
-            ospf_match_external: true
+            ospf_route_type: external
           - source_protocol: ospfv3
-            ospf_match_internal: true
+            ospf_route_type: internal
           - source_protocol: ospf
-            ospf_match_nssa_external: nssa-external
+            ospf_route_type: nssa-external
           - source_protocol: connected
             rcf: VRF_AFIPV6MULTI_RCF_CONNECTED()
           - source_protocol: static
