--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-base.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-base.yml
@@ -77,11 +77,11 @@ router_bgp:
     - source_protocol: ospf
       include_leaked: true
     - source_protocol: ospf
-      ospf_match_internal: true
+      ospf_route_type: internal
     - source_protocol: ospf
-      ospf_match_external: true
+      ospf_route_type: external
     - source_protocol: ospf
-      ospf_match_nssa_external: nssa-external 1
+      ospf_route_type: nssa-external 1
     - source_protocol: bgp
       route_map: RM-REDISTRIBUTE-BGP
       # this should not do anything as leaked is generated when source protocol is bgp
@@ -114,11 +114,11 @@ router_bgp:
     redistribute_routes:
       - source_protocol: ospf
         include_leaked: true
-        ospf_match_internal: true
+        ospf_route_type: internal
       - source_protocol: ospf
-        ospf_match_external: true
+        ospf_route_type: external
       - source_protocol: ospf
-        ospf_match_nssa_external: nssa-external
+        ospf_route_type: nssa-external
       - source_protocol: connected
         include_leaked: true
         rcf: Address_Family_IPV4_Connected()
@@ -146,11 +146,11 @@ router_bgp:
     redistribute_routes:
       - source_protocol: ospfv3
         include_leaked: true
-        ospf_match_external: true
+        ospf_route_type: external
       - source_protocol: ospfv3
-        ospf_match_internal: true
+        ospf_route_type: internal
       - source_protocol: ospfv3
-        ospf_match_nssa_external: nssa-external 1
+        ospf_route_type: nssa-external 1
       - source_protocol: static
         route_map: RM-IPV6-STATIC-TO-BGP
       - source_protocol: ospfv3
